--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,11 +36,15 @@ dependencies:
   smooth_page_indicator: ^0.3.0-nullsafety.0
   flutter_bloc: ^7.0.1
   dio: ^4.0.0
+  json_annotation: 4.0.1
 
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+  build_runner: 2.0.2
+  json_serializable: 4.1.1
 
   flutter_launcher_icons: "^0.9.0"
 
